--- a/templates/home.html
+++ b/templates/home.html
@@ -8,8 +8,8 @@
 <body>
 
     <h1>Job Search</h1>
-    <form>
-        <input placeholder="Search for a job" required />
+    <form action="/report" method="get">
+        <input placeholder="Search for a job" required name="word"/>
         <button>Search</button>
     </form>
     
