--- a/templates/home.html
+++ b/templates/home.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Job Search</title>
+    <title>Personal Job Search</title>
 </head>
 <body>
 
-    <h1>Job Search</h1>
+    <h1>Seach by term:</h1>
     <form action="/report" method="get">
-        <input placeholder="Search for a job" required name="word"/>
-        <button>Search</button>
+        <input name="word" placeholder="" required/>
+        <button>Find my job</button>
     </form>
     
 </body>
