--- a/templates/report.html
+++ b/templates/report.html
@@ -14,9 +14,14 @@
 </head>
 <body>
 
-    <h1>Search Results</h1>
-    <h3>Found {{resultNumber}} results for: {{searchingBy}}</h3>
+    <h1>Search Results for Remote Jobs</h1>
+    <h3>{{resultNumber}} {{searchingBy}} jobs found.</h3>
     <a href="/export?word={{searchingBy}}">Export to CSV</a>
+    <h3>
+        <i class="far fa-arrow-alt-circle-left"></i>
+        <!-- need to import font awesome -->
+        <span>Go Back</span>
+    </h3>
     <section>
         <h4>Title</h4>
         <h4>Company</h4>
