--- a/templates/home.html
+++ b/templates/home.html
@@ -7,10 +7,12 @@
 </head>
 <body>
 
-    <h1>Seach by term:</h1>
+
+    <h1>Find Your Remote Job</h1>
+    <h3>Seach by term:</h3>
     <form action="/report" method="get">
         <input name="word" placeholder="" required/>
-        <button>Find my job</button>
+        <button>Locate My Job</button>
     </form>
     
 </body>
