css file not working...rip

--- a/templates/report.html
+++ b/templates/report.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Job Results</title>
     <link href="https://andybrewer.github.io/mvp/mvp.css" rel="stylesheet"></link>
+    <link href="styles/styles.css" rel="stylesheet" type="text/css" />
+    <title>Job Results</title>
 <body>
 
     <h1>Your Taste of Remote Jobs</h1>
@@ -29,8 +30,7 @@
             <a href="{{job.link}}" target="_blank">Apply</a>
         {% endfor %}
     </section>
-
-    <!-- import font awesome -->
+    
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
     
 </body>
