--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles/styles.css" rel="stylesheet" type="text/css" />
+    <link href="https://andybrewer.github.io/mvp/mvp.css" rel="stylesheet"></link>
     <title>Personal Job Search</title>
 </head>
 <body>
