--- a/templates/home.html
+++ b/templates/home.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles/styles.css" rel="stylesheet" type="text/css" />
     <link href="https://andybrewer.github.io/mvp/mvp.css" rel="stylesheet"></link>
     <title>Personal Job Search</title>
 </head>
 <body>
 
-
-    <h1>Find Your Remote Job</h1>
-    <h3>Seach by term:</h3>
-    <form action="/report" method="get">
-        <input name="word" placeholder="" required/>
-        <button>Locate My Job</button>
-    </form>
+    <header>
+        <h1>Find Your Remote Job</h1>
+    </header>
+    <main>
+        <form action="/report" method="get">
+            <h3>Seach by term:</h3>
+            <input name="word" placeholder="i.e. python, react etc" required/>
+            <button>Locate My Job</button>
+        </form>
+    </main>
     
 </body>
 </html>
